--- a/ags-todo-api/appsettings.json
+++ b/ags-todo-api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  //Adner: Configuração da string de conexão com o banco de dados SQLite
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=agsTodo.db"
+  }
 }
