Implement JWT authentication with register/login endpoints and Swagger JWT support

--- a/ags-todo-api/appsettings.json
+++ b/ags-todo-api/appsettings.json
@@ -10,5 +10,13 @@
   //Adner: Configuração da string de conexão com o banco de dados SQLite
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=agsTodo.db"
+  },
+
+  //Adner: Configuração do JWT
+  "Jwt": {
+    "Key": "kqby*8o^!zi+s($5+@o%^3ltpe=p@hfn*cggal1so9rt=*r&ev", //Chave secreata para a assinatura do token JWT, deve ser mantida em segredo e não deve ser exposta publicamente, mas como aqui é apenas de exemplo mesmo....
+    "Issuer": "ags-todo-api", //nome da sua API para qual estamos emitindo o token
+    "Audience": "ags-todo-api-users" // Grupo de usuários que podem usar o token, no caso é os usuários da API
   }
+
 }
